ubuntu-release-upgrader (1:16.04.6) UNRELEASED; urgency=medium

  * utils/demotions.py: Set Apt::Architectures too so that the host's
    multiarch setup doesn't get in the way.

 -- Iain Lane <iain@orangesquash.org.uk>  Tue, 16 Feb 2016 14:11:22 +0000

ubuntu-release-upgrader (1:16.04.5) xenial; urgency=medium

  * DistUpgrade/DistUpgradeView.py: switch from package manager ResultFailed
    to RESULT_FAILED, apparently the former was obsoleted some time ago.
    (LP: #1292335)

 -- Brian Murray <brian@ubuntu.com>  Fri, 12 Feb 2016 10:27:15 -0800

ubuntu-release-upgrader (1:16.04.4) xenial; urgency=medium

  * DistUpgrade/DistUpgradeMain.py: check the apt cache to see what version of
    apt is installed rather than using the apt VERSION string. (LP: #1306065)
  * test/test_sources_list.py: resolve test failures.
  * DistUpgrade/DistUpgradeCache.py: log packages which will be downgraded.
  * DistUpgrade/DistUpgradeNonInteractive.py: Ensure output when using
    is not garbled as single bytestream escaped characters. Thanks to
    Christopher Lee for the patch. (LP: #1538880)

 -- Brian Murray <brian@ubuntu.com>  Wed, 13 Jan 2016 11:33:25 -0800

ubuntu-release-upgrader (1:16.04.3) xenial; urgency=medium

  * DistUpgrade/DistUpgradeController.py: if a BaseMetaPkg has no origins,
    because an Ubuntu mirror has been deactivated, then create a useful
    sources.list file that parallels the one for the deactivated mirror.
    (LP: #1511783)
  * utils/update_mirrors.py: Instead of just appending new mirrors to the
    mirrors.cfg file also remove mirrors that are no longer valid.
    (LP: #1463680)

 -- Brian Murray <brian@ubuntu.com>  Wed, 18 Nov 2015 11:05:19 -0800

ubuntu-release-upgrader (1:16.04.2) xenial; urgency=medium

  * DistUpgrade/DistUpgradeQuirks.py: protect against the linux metapackage
    not being available in the cache. (LP: #1511831)

 -- Brian Murray <brian@ubuntu.com>  Mon, 02 Nov 2015 09:50:02 -0800
